err/atx-androguard.err
Listing '.'...
Listing './bin'...
Compiling './bin/androaxml.py'...
***   File "./bin/androaxml.py", line 61
    print "Unknown file type"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/androcsign.py'...
***   File "./bin/androcsign.py", line 78
    print "Androcsign version %s" % androconf.ANDROGUARD_VERSION
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/androdd.py'...
***   File "./bin/androdd.py", line 81
    print "Dump information %s in %s" % (filename, output)
                                    ^
SyntaxError: invalid syntax

Compiling './bin/androdiff.py'...
***   File "./bin/androdiff.py", line 100
    print d1, dx1, d2, dx2
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/androgui.py'...
Compiling './bin/androlyze.py'...
***   File "./bin/androlyze.py", line 78
    print "Androguard version %s" % androconf.ANDROGUARD_VERSION
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/androsign.py'...
***   File "./bin/androsign.py", line 62
    print "---->", ret[0]
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/androsim.py'...
***   File "./bin/androsim.py", line 123
    print "\t--> methods: %f%% of similarities" % el.get_similarity_value(new)
                                              ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/androguard'...
Listing './lib/python3.5/site-packages/androguard/core'...
Listing './lib/python3.5/site-packages/androguard/core/analysis'...
Compiling './lib/python3.5/site-packages/androguard/core/analysis/analysis.py'...
***   File "./lib/python3.5/site-packages/androguard/core/analysis/analysis.py", line 496
    print "METHOD", self.method.get_class_name(), self.method.get_name(
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/androguard/core/analysis/auto.py'...
***   File "./lib/python3.5/site-packages/androguard/core/analysis/auto.py", line 110
    except Exception, why:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/androguard/core/androconf.py'...
***   File "./lib/python3.5/site-packages/androguard/core/androconf.py", line 175
    raise ValueError, 'the input must be an integer'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/androguard/core/api_specific_resources'...
Listing './lib/python3.5/site-packages/androguard/core/api_specific_resources/aosp_permissions'...
Listing './lib/python3.5/site-packages/androguard/core/api_specific_resources/api_permission_mappings'...
Listing './lib/python3.5/site-packages/androguard/core/binaries'...
Compiling './lib/python3.5/site-packages/androguard/core/binaries/idapipe.py'...
***   File "./lib/python3.5/site-packages/androguard/core/binaries/idapipe.py", line 58
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/androguard/core/bytecode.py'...
***   File "./lib/python3.5/site-packages/androguard/core/bytecode.py", line 82
    print buff
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/androguard/core/bytecodes'...
Compiling './lib/python3.5/site-packages/androguard/core/bytecodes/apk.py'...
***   File "./lib/python3.5/site-packages/androguard/core/bytecodes/apk.py", line 310
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/androguard/core/bytecodes/arm.py'...
***   File "./lib/python3.5/site-packages/androguard/core/bytecodes/arm.py", line 18
    print '-> Sections'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/androguard/core/bytecodes/dvm.py'...
***   File "./lib/python3.5/site-packages/androguard/core/bytecodes/dvm.py", line 2396
    print nb,
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/androguard/core/data'...
Compiling './lib/python3.5/site-packages/androguard/core/data/data.py'...
***   File "./lib/python3.5/site-packages/androguard/core/data/data.py", line 90
    print self.gvmx.G
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/androguard/core/debugger'...
Listing './lib/python3.5/site-packages/androguard/core/resources'...
Listing './lib/python3.5/site-packages/androguard/decompiler'...
Listing './lib/python3.5/site-packages/androguard/decompiler/dad'...
Compiling './lib/python3.5/site-packages/androguard/decompiler/dad/ast.py'...
***   File "./lib/python3.5/site-packages/androguard/decompiler/dad/ast.py", line 185
    buf.append('\u{:04x}'.format(ord(c)))
              ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 0-1: truncated \uXXXX escape

Compiling './lib/python3.5/site-packages/androguard/decompiler/dad/decompile.py'...
***   File "./lib/python3.5/site-packages/androguard/decompiler/dad/decompile.py", line 177
    print self.get_source()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/androguard/decompiler/decompiler.py'...
***   File "./lib/python3.5/site-packages/androguard/decompiler/decompiler.py", line 143
    print self.get_source_method(method)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/androguard/gui'...
Compiling './lib/python3.5/site-packages/androguard/gui/DataModel.py'...
***   File "./lib/python3.5/site-packages/androguard/gui/DataModel.py", line 27
    print "DATA OFFSET", value
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/androguard/gui/DisasmViewMode.py'...
***   File "./lib/python3.5/site-packages/androguard/gui/DisasmViewMode.py", line 198
    print methods
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/androguard/gui/binwindow.py'...
***   File "./lib/python3.5/site-packages/androguard/gui/binwindow.py", line 335
    print 'SWITCH VIEW'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/androguard/gui/helpers.py'...
***   File "./lib/python3.5/site-packages/androguard/gui/helpers.py", line 70
    print "WARNING: %s already a Lclass; name" % path
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/androguard/gui/mainwindow.py'...
***   File "./lib/python3.5/site-packages/androguard/gui/mainwindow.py", line 212
    print f, filename, description
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/androguard/gui/sourcewindow.py'...
***   File "./lib/python3.5/site-packages/androguard/gui/sourcewindow.py", line 538
    print 'COPY'
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/androguard/patch'...
Compiling './lib/python3.5/site-packages/androguard/patch/zipfile.py'...
***   File "./lib/python3.5/site-packages/androguard/patch/zipfile.py", line 380
    raise RuntimeError, "Corrupt extra field %s"%(ln,)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atx_androguard-3.0.egg-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
